[package]
name = "sqliter"
version = "0.0.1"
edition = "2021"
authors = ["james@jsdw.me"]
description = "An opinionated connnection/migration handler around rusqlite to make light work of using sqlite databases for small apps"
license = "MIT"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0.40"
