[package]
name = "sqliter"
version = "0.2.0"
edition = "2021"
authors = ["james@jsdw.me"]
description = "An opinionated async connnection/migration handler for rusqlite to make light work of using sqlite databases for small apps"
license = "MIT"

[dependencies]
async-rusqlite = "0.3.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
