[package]
name = "sqliter"
version = "0.6.0"
edition = "2021"
authors = ["james@jsdw.me"]
description = "An opinionated async connnection/migration handler for rusqlite to make light work of using sqlite databases for small apps"
license = "MIT"

[dependencies]
async-rusqlite = "0.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3.5.0"
